Fixed negative table alignment

--- a/stickers.css
+++ b/stickers.css
@@ -16,7 +16,7 @@ width:8%;
 
 table {
 margin-left:10%;
-margin-top:-17.5%;
+margin-top:-16%;
 width:80%;
 font-size:20px;
 opacity: 0.9;
